# kalendarium

./: README.md  README.rst  arabic_to_roman.py  arabic_to_roman1.py  arabic_to_roman2.py  arabic_to_roman3.py  kalendarium
demo/kal/: Cargo.toml  main.rs
demo/kal2/: Cargo.toml  main.rs
demo/kalendarium/: Cargo.toml  README.md  main.rs
demo/no_crate/kalendarium/: main.rs
demo/no_crate/numerum/: Cargo.toml  main.rs
demo/numerum/: Cargo.toml  main.rs
rust/: .gitignore  Cargo.toml  README.md
rust/src/: date.rs  error.rs  lib.rs  numeral.rs
src/: ad_romanum.rs  kalendarium.rs  lib.rs
